Iniciando com js

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pseudo.css">
+    <link rel="stylesheet" href="color.css">
     <title>SAFE-ZONE</title>
 </head>
 <body>
-        <div class="grid-container">
-            <div class="item0 fixed">
+        <div id="grid-container">
+            <div class="item0 ">
                 <div class="divItem0">
                     <p>sAfe</p>
                     <p>Zone</p>
                 </div>
                 
             </div>
-            <div class="item1 fixed">
+            <div class="item1 ">
                 <div class="divItem1">
                     <a href="" class="linkItem1">
                         <img src="./svg/20846546501582634781.svg" id="iconesItem1">
@@ -36,7 +37,7 @@
 
                 </div>
             </div>
-            <div class="item2 fixed">
+            <div class="item2 ">
                 <button class="buttonItem2">◀</button>
                 <button class="buttonItem2">▶</button>
                 <div class="divItem2">
@@ -47,9 +48,9 @@
                     <button class="buttonProfile">Luiz Gusttavo</button>
                 </div>
             </div>
-            <div class="item3 itemConteudo">
+            <div class="item3 ">
                 <div class="divItem3">
-                    <div class="imgConteudo">
+                    <div id="imgConteudo">
                         
                     </div>
                     <div class="infoConteudo">
@@ -155,7 +156,7 @@
                     </div>
                 </div>
             </div>  
-            <div class="item4 fixed">
+            <div class="item4 ">
                 <div class="divItem4">
                     <a href="" class="linkItem4">
                         <img src="./svg/Back.svg" id="iconesItem11"></a>
@@ -166,6 +167,7 @@
                 </div>
             </div>
         </div>
-
+<script src="main.js"></script>
+<script src="cor.js"></script>
 </body>
 </html>
