Desenvolvendo a reestilização com javascript

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button class="buttonItem2">▶</button>
                 <div class="divItem2">
                 </div>
-                <p id="tituloItem2">Phonky Trap - Single - Suave Lee </p>
+                <p id="tituloItem2"></p>
                 <div id="profile">
                     <span class="imgProfile"></span>
                     <button class="buttonProfile">Luiz Gusttavo</button>
@@ -54,13 +54,14 @@
                         
                     </div>
                     <div class="infoConteudo">
-                        <h1 id="infoAutor">Phonky Trap</h1>
-                        <p id="infoAlbum">Single</p>
-                        <p id="infoMusica">796.262 ouvintes mensais</p>
+                        <h1 id="infoMusica"></h1>
+                        <p id="infoAlbum"></p>
+                        <p id="infoOuvintes"></p>
                         <div id="infoSubConteudo">
-                            <p id="infAutor"> Suave Lee</p>
-                            <p id="infGravadora">℗ 2021 3193553 Records DK</p>
-                            <p id="infDireitos">13 de julho de 2021</p>
+                            <p id="infAutor"></p>
+                            <p id="infGravadora1"></p>
+                            <p id="infGravadora2"></p>
+                            <p id="infData"></p>
                             <button id="seguir">Seguir</button>
                         </div>
                         
@@ -169,5 +170,6 @@
         </div>
 <script src="main.js"></script>
 <script src="cor.js"></script>
+<script src="control.js"></script>
 </body>
 </html>
