Adição de 2 novas musicas

--- a/index.html
+++ b/index.html
@@ -99,60 +99,19 @@
                                 <td class="tdMain"><p id="pAlbum4" class="pAlbum"></p></td>
                                 <td class="tdMain"><p id="pDuracao4" class="pDuracao"></p></td>
                             </tr>
-                            <tr>
-                                <td class="tdMain">5</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
+                            <tr id="musica5" class="trMain">
+                                <td class="tdMain"><p id="pId5" class="pId"></p></td>
+                                <td class="tdMain"><p id="pTitulo5" class="pTitulo"></p></td>
+                                <td class="tdMain"><p id="pAlbum5" class="pAlbum"></p></td>
+                                <td class="tdMain"><p id="pDuracao5" class="pDuracao"></p></td>
                             </tr>
-                            <tr>
-                                <td class="tdMain">6</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
+                            <tr id="musica6" class="trMain">
+                                <td class="tdMain"><p id="pId6" class="pId"></p></td>
+                                <td class="tdMain"><p id="pTitulo6" class="pTitulo"></p></td>
+                                <td class="tdMain"><p id="pAlbum6" class="pAlbum"></p></td>
+                                <td class="tdMain"><p id="pDuracao6" class="pDuracao"></p></td>
                             </tr>
-                            <tr>
-                                <td class="tdMain">7</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
-                            <tr>
-                                <td class="tdMain">8</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
-                            <tr>
-                                <td class="tdMain">9</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
-                            <tr>
-                                <td class="tdMain">9</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
-                            <tr>
-                                <td class="tdMain">9</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
-                            <tr>
-                                <td class="tdMain">9</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
-                            <tr>
-                                <td class="tdMain">9</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">?</td>
-                                <td class="tdMain">1min</td>
-                            </tr>
+                            
                         </table>
                     </div>
                 </div>
